YAML-STANDARD/namespace.yaml
# YAML-STANTARD/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: standard
